<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/margin_medium"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_details_iv_avatar"
            android:layout_width="@dimen/size_profile_image"
            android:layout_height="@dimen/size_profile_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/margin_medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_small"
            android:layout_toEndOf="@id/fragment_details_iv_avatar"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:text="@string/fragment_details_text_name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:id="@+id/fragment_details_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:text="@string/fragment_details_tv_text_email"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_medium"
                />

            <TextView
                android:id="@+id/fragment_details_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginBottom="@dimen/margin_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:text="@string/fragment_details_tv_birthday"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_medium"
                />

            <TextView
                android:id="@+id/fragment_details_tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium"/>

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:fontFamily="sans-serif"
            android:text="@string/fragment_details_tv_residence"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/text_size_medium"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/place_of_residence_image"/>

    </LinearLayout>

    <TextView
        android:id="@+id/fragment_details_tv_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/fragment_details_tv_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/fragment_details_tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/fragment_details_tv_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:text="@string/fragment_details_tv_phone_number"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/fragment_details_tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:text="@string/fragment_details_tv_call"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/fragment_details_tv_cell_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"/>


</LinearLayout>